# llama.cpp

./: .dockerignore  .gitignore  CMakeLists.txt  CODEOWNERS  Makefile  Package.swift  README.md  build-xcframework.sh  convert-hf-to-gguf.py  convert-lora-to-ggml.py  convert.sh  convert_hf_to_gguf.py  convert_hf_to_gguf_update.py  convert_lora_to_gguf.py  convert_skip.py  get_lora.py  ggml-alloc.c  ggml-backend.c  ggml-cuda.cu  llama.cpp  llama.h  minicpmv-cli  pyproject.toml  run.sh
.devops/: cann.Dockerfile  cpu.Dockerfile  cuda.Dockerfile  intel.Dockerfile  llama-cli-cann.Dockerfile  musa.Dockerfile  openvino.Dockerfile  rocm.Dockerfile  s390x.Dockerfile  vulkan.Dockerfile  zendnn.Dockerfile
.github/: labeler.yml
app/: CMakeLists.txt  llama.cpp
ci/: run.sh
common/: arg.cpp  arg.h  chat-auto-parser-generator.cpp  chat-diff-analyzer.cpp  chat-peg-parser.cpp  chat.cpp  chat.h  common.cpp  common.h  download.cpp  download.h  fit.cpp  fit.h  hf-cache.cpp  hf-cache.h  peg-parser.cpp  peg-parser.h  preset.cpp  preset.h  sampling.cpp  speculative.cpp  speculative.h
conversion/: __init__.py  base.py  bert.py  deepseek.py  gemma.py  llama.py  minicpm.py  qwen.py  step3.py
docs/: android.md  autoparser.md  build.md  install.md  multimodal.md  ops.md  preset.md  speculative.md
examples/: json_schema_to_grammar.py
examples/llava/: CMakeLists.txt  README-minicpmv-dev.md  README-minicpmv-l.md  README-minicpmv-pj-l.md  README-minicpmv2.5.md  README-minicpmv2.6.md  clip.cpp  clip.h  layer_skip.py  llava-cli.cpp  llava.cpp  llava.h  minicpmv-cli.cpp  minicpmv-convert-image-encoder-to-gguf-Q8_0.py  minicpmv-convert-image-encoder-to-gguf-Q8_0_per_group.py  minicpmv-convert-image-encoder-to-gguf.py  minicpmv-surgery.py  minicpmv2_0-surgery.py  sp.raw
examples/llava/minicpmv-convert/: minicpmv2_0-convert-image-encoder-to-gguf.py
ggml/: CMakeLists.txt
ggml-cuda/: rope.cu
grammars/: README.md
include/: llama.h
scripts/: sync-ggml.last  sync_vendor.py  ui-assets.cmake
src/: llama-arch.cpp  llama-arch.h  llama-context.cpp  llama-context.h  llama-cparams.h  llama-ext.h  llama-graph.cpp  llama-graph.h  llama-hparams.cpp  llama-hparams.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-memory-hybrid.cpp  llama-model-loader.cpp  (+7 more)
tools/batched-bench/: CMakeLists.txt
tools/completion/: CMakeLists.txt  README.md  completion.cpp
tools/fit-params/: CMakeLists.txt  fit-params.cpp
tools/ui/: .env.example  .gitignore  .prettierignore  CMakeLists.txt  embed.cpp  eslint.config.js  package-lock.json  package.json  playwright.config.ts  pwa-assets-dark.config.ts  pwa-assets.config.ts  svelte.config.js  tsconfig.json  vite.config.ts  vitest-setup-client.ts
tools/ui/scripts/: make-icons-circular.js  post-build.js  vite-plugin-build-info.ts  vite-plugin-llama-cpp-build.ts  vite-plugin-relativize-base.ts  vite-plugin-splash-screen.ts
tools/ui/scripts/git-hooks/: pre-commit.sh  pre-push.sh
tools/ui/src/: app.css  app.d.ts  app.html
tools/ui/src/lib/components/app/chat/: index.ts
tools/ui/src/lib/components/app/chat/ChatForm/: ChatForm.svelte
tools/ui/src/lib/components/app/chat/ChatForm/ChatFormActions/: ChatFormActionModels.svelte  ChatFormActions.svelte
tools/ui/src/lib/components/app/chat/ChatForm/ChatFormActions/ChatFormActionAdd/: ChatFormActionAddSheet.svelte  ChatFormActionAddToolsSubmenu.svelte
tools/ui/src/lib/components/app/chat/ChatMessages/: ChatMessageAgenticContent.svelte
tools/ui/src/lib/components/app/chat/ChatMessages/ChatMessage/ChatMessageAssistant/: ChatMessageAssistant.svelte
tools/ui/src/lib/components/app/chat/ChatScreen/: ChatScreen.svelte  ChatScreenActionScrollDown.svelte
tools/ui/src/lib/components/app/content/: MermaidPreview.svelte
tools/ui/src/lib/components/app/content/MarkdownContent/: MarkdownContent.svelte  markdown-content.css  markdown-handlers.ts
tools/ui/src/lib/components/app/content/MarkdownContent/plugins/rehype/: code-block-utils.ts  enhance-mermaid-blocks.ts  enhance-svg-blocks.ts  mermaid-pre.ts  pre-transform.ts  svg-pre.ts
tools/ui/src/lib/components/app/models/: ModelsSelectorOption.svelte  ModelsSelectorSheet.svelte
tools/ui/src/lib/components/app/navigation/SidebarNavigation/: SidebarNavigation.svelte  SidebarNavigationConversationItem.svelte
tools/ui/src/lib/components/app/settings/SettingsChat/: SettingsChat.svelte  SettingsChatImportExportTab.svelte
tools/ui/src/lib/components/pwa/: PwaMetaTags.svelte  PwaRefreshAlert.svelte  index.ts
tools/ui/src/lib/components/ui/sidebar/: sidebar-provider.svelte
tools/ui/src/lib/constants/: api-endpoints.ts  app.ts  code.ts  diagram-blocks.ts  icons.ts  image-size.ts  index.ts  jpeg-exif.ts  mcp.ts  mermaid-blocks.ts  model-loading.ts  pwa.ts  sandbox.ts  settings-keys.ts  settings-registry.ts  sse.ts  storage.ts  supported-file-types.ts  svg-blocks.ts  tools.ts  ui.ts
tools/ui/src/lib/enums/: files.enums.ts  index.ts  mcp.enums.ts  server.enums.ts  splash.enums.ts  tools.enums.ts
tools/ui/src/lib/hooks/: use-pwa.svelte.ts  use-tools-panel.svelte.ts
tools/ui/src/lib/services/: chat.service.ts  database.service.ts  index.ts  mcp.service.ts  migration.service.ts  sandbox-harness.ts  sandbox-worker.js  sandbox.service.ts
tools/ui/src/lib/stores/: agentic.svelte.ts  build-info.svelte.ts  chat.svelte.ts  conversations.svelte.ts  mcp.svelte.ts  models.svelte.ts  theme.svelte.ts  tools.svelte.ts  version.svelte.ts
tools/ui/src/lib/types/: api.d.ts  database.d.ts  index.ts  models.d.ts  settings.d.ts  splash.ts
tools/ui/src/lib/utils/: api-headers.ts  cap-img-size.ts  cors-proxy.ts  file-type.ts  heic-to-jpeg.ts  index.ts  jpeg-orientation.ts  mcp.ts  pdf-processing.ts  process-uploaded-files.ts  progress.ts  sanitize-svg.ts  svg-shadow.ts
tools/ui/src/routes/: +layout.svelte
tools/ui/tests/client/: cap-img-size.svelte.test.ts
tools/ui/tests/e2e/: pwa.e2e.ts
tools/ui/tests/stories/: ModelsSelector.stories.svelte  PwaRefreshAlert.stories.svelte
tools/ui/tests/unit/: jpeg-orientation.test.ts  mcp-service.test.ts  pwa.spec.ts  sanitize-headers.test.ts
(+230 files in other folders)
